<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/helloactivity_mainframe"
    android:layout_width="match_parent"
    android:background="@color/ucla_blue"

    android:layout_height="match_parent"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="32dp">

        <TextView
            android:id="@+id/activity_hello_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/helloactivity_headline"
            android:textColor="@color/white"
            android:textSize="@dimen/abc_text_size_display_1_material" />

        <TextView
            android:id="@+id/activity_hello_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/helloactivity_subhead"
            android:textColor="@color/white"
            android:textSize="@dimen/abc_text_size_subhead_material" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:hintTextColor="@color/accent"

                android:layout_weight="1">

                <EditText
                    android:id="@+id/activity_hello_age"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789"
                    android:hint="@string/helloactivity_age"
                    android:background="@color/ucla_blue"


                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="16dp" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <CheckBox
                android:id="@+id/woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="Woman"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:textColor="@color/white"

                android:text="Man" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <CheckBox
                android:id="@+id/imperial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"

                android:text="Imperial"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/metric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"

                android:checked="false"
                android:text="Metric" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:hintTextColor="@color/accent"

                android:layout_weight="1">

                <EditText
                    android:id="@+id/activity_hello_height"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789"
                    android:hint="@string/helloactivity_height"
                    android:background="@color/ucla_blue"
                    android:textColorHint="@color/white"

                    android:inputType="numberDecimal|number"
                    android:singleLine="true"
                    android:textSize="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:hintTextColor="@color/accent"
                android:textColor="@color/white"

                android:layout_weight="1">

                <EditText
                    android:id="@+id/activity_hello_weight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789"
                    android:hint="@string/helloactivity_weight"
                    android:inputType="numberDecimal|number"
                    android:singleLine="true"
                    android:background="@color/ucla_blue"
                    android:textColor="@color/white"

                    android:textSize="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.databaseproj.caltracker.controller.LabelledSpinner
            android:id="@+id/exercise_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"

            custom:labelText="@string/helloactivity_spinner_exercise"
            />

        <CheckBox
            android:id="@+id/activity_hello_check_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"

            android:checked="true"
            android:text="@string/helloactivity_share_data" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"

            android:text="@string/helloactivity_hint_settings"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/helloactivity_textview_tos"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/helloactivity_textview_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/helloactivity_terms"
            android:textColor="@color/accent"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/activity_hello_button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="24dp"
            android:background="?android:attr/selectableItemBackground"
            android:drawableEnd="@drawable/ic_navigate_next_pink_24px"
            android:drawableRight="@drawable/ic_navigate_next_pink_24px"
            android:padding="8dp"
            android:text="@string/helloactivity_button_start"
            android:textColor="@color/accent"
            android:textStyle="bold" />



    </LinearLayout>
</ScrollView>